--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     html {
       scroll-behavior: smooth;
     }
+
     ::-webkit-scrollbar {
       width: 20px;
     }
@@ -103,11 +104,26 @@
     .errorDiv {
       color: Red;
     }
-		
-     #copyApi{
+
+    #copyApi {
       margin-bottom: 6;
       margin-left: 2;
-     }
+    }
+
+    .rememberApi {
+      width: 15px;
+      height: 15px;
+      margin-top: 10px;
+    }
+
+    .rememberApiDiv {
+      display: flex;
+    }
+
+    .rememberApiText {
+      margin-top: 5px;
+      margin-left: 5px;
+    }
   </style>
 </head>
 
@@ -214,8 +230,14 @@
       <br>
       <div class="Apikey my-2">
         <h4>Api Key:</h4>
-        <input spellcheck="false" class="Apikey-input" id="Apikey-input" placeholder="Enter Your API key">
+        <input spellcheck="false" class="Apikey-input" id="Apikey-input" value="4e22589fc4ec4b18bd46a08505a59da8"
+          placeholder="Enter Your API key">
         <button class="btn btn-primary btn-sm" id="copyApi" onclick="copyApiKey()">Copy Api Key</button>
+        <br>
+        <div class="rememberApiDiv">
+          <input id="rememberApi" class="rememberApi" type="checkbox">
+          <p class="rememberApiText">Rember Api Key</p>
+        </div>
       </div>
       <br>
       <button class="btn btn-primary my-2" accesskey="g" onclick="newsResponse()">Get News</button>
@@ -252,8 +274,10 @@
 
 
   </div>
-  <script type="text/javascript" src="index.js"></script>
 
+
+
+  <script src="index.js"></script>
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
