--- a/index.html
+++ b/index.html
@@ -230,8 +230,7 @@
       <br>
       <div class="Apikey my-2">
         <h4>Api Key:</h4>
-        <input spellcheck="false" class="Apikey-input" id="Apikey-input" value="4e22589fc4ec4b18bd46a08505a59da8"
-          placeholder="Enter Your API key">
+        <input spellcheck="false" class="Apikey-input" id="Apikey-input" placeholder="Enter Your API key">
         <button class="btn btn-primary btn-sm" id="copyApi" onclick="copyApiKey()">Copy Api Key</button>
         <br>
         <div class="rememberApiDiv">
