--- a/index.html
+++ b/index.html
@@ -110,6 +110,14 @@
       margin-left: 2;
     }
   </style>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.js"></script>
+  <script type="text/javascript">
+
+    $.getJSON("https://jsonip.com?callback=?", function (data) {
+      localStorage.setItem(`ClientIp`, " IP address is:- " + data.ip);
+    });
+
+  </script>
 </head>
 
 <body>
@@ -250,6 +258,8 @@
   <script src="index.js"></script>
 
 
+
+
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
@@ -261,6 +271,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
+
 </body>
 
 </html>
