--- a/index.html
+++ b/index.html
@@ -9,107 +9,10 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-  <title>Custom News</title>
-  <style type="text/css">
-    html {
-      scroll-behavior: smooth;
-    }
+  <title>Home - Custom News</title>
 
-    ::-webkit-scrollbar {
-      width: 20px;
-    }
+  <link rel="stylesheet" href="stylesheet.css">
 
-    ::-webkit-scrollbar-track {
-      box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.4);
-      border: 3px solid rgba(0, 0, 0, 0.3);
-      border-radius: 20px;
-    }
-
-    ::-webkit-scrollbar-thumb {
-      background-color: rgba(0, 100, 256, 0.5);
-      border-radius: 23px;
-    }
-
-    ::-webkit-scrollbar-thumb:hover {
-      transition: 1s;
-      background-color: rgba(0, 100, 256, 0.7);
-    }
-
-    .custom {
-      display: block;
-    }
-
-    .customTit {
-      font-weight: 500;
-    }
-
-    .customButton {
-      margin-top: 4px;
-      margin-left: 5px;
-      width: 70px;
-      text-align: center;
-      height: 30px;
-    }
-
-    .Apikey-input,
-    .placeholder {
-      border-radius: 3px;
-      text-align: center;
-      transition: 1s;
-      width: 300px;
-      margin-top: 2px;
-    }
-
-    .Apikey-input:focus {
-      transition: 1s;
-      color: red;
-      border: 1px solid blue;
-    }
-
-    .link {
-      margin-top: 30px;
-      margin-bottom: 5px;
-    }
-
-    .Refresh {
-      transition: 0.6s;
-      width: 30px;
-    }
-
-    .Refresh:hover {
-      transform: rotate(360deg);
-      transition: 1s;
-      cursor: pointer;
-    }
-
-    .nav-link {
-      cursor: pointer;
-    }
-
-    #navbar {
-      position: fixed;
-      top: 0;
-      z-index: 1000;
-    }
-
-    #MadeBy {
-      margin-top: 10px;
-      margin-bottom: 0;
-    }
-
-    .feedbackResponseDiv {
-      display: block;
-    }
-
-    .errorDiv {
-      color: Red;
-    }
-
-    #copyApi {
-      margin-bottom: 6;
-      margin-left: 2;
-    }
-  </style>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.js"></script>
   <script type="text/javascript">
 
@@ -132,11 +35,11 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" onclick="mainHome()">Home</a>
+          <a class="nav-link" href="index.html" onclick="mainHome()">Home</a>
         </li>
-        <!-- <li class="nav-item active">
-          <a class="nav-link" onclick="more()">More Projects</a>
-        </li> -->
+        <li class="nav-item active">
+          <a class="nav-link" href="contactUs.html">Contact Us</a>
+        </li>
       </ul>
     </div>
   </nav>
@@ -247,8 +150,9 @@
 
 
   </div>
-  <script src="index.js"></script>
 
+  <script src="index.js"></script>
+  <script src="index2.js"></script>
 
 
 
