--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <a class="nav-link" href="index.html" onclick="mainHome()">Home</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="contactUs.html">Contact Us</a>
+          <a class="nav-link" target="_blank" href="contactUs.html">Contact Us</a>
         </li>
       </ul>
     </div>
@@ -139,9 +139,9 @@
     <center>
       <h6 class="card-subtitle mb-2 text-muted my-2">Thanks For Visiting Us.</h6>
       <h6 class="card-subtitle mb-2 text-muted my-2">Supported For UI By <a
-          href="https://getbootstrap.com/">getbootstrap.com</a></h6>
+          href="https://getbootstrap.com/" target="_blank">getbootstrap.com</a></h6>
       <h6 class="card-subtitle mb-2 text-muted my-2">Supported For Json Files By <a
-          href="https://newsapi.org/">newsapi.org</a></h6>
+          href="https://newsapi.org/" target="_blank">newsapi.org</a></h6>
       <h6 class="card-subtitle mb-2 text-muted my-2">Give Your <button type="button" onclick="feedbackResponse()"
           class="btn btn-secondary btn-sm" id="scroll4">Feedback</button></h6>
     </center>
