--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <a class="nav-link" href="index.html" onclick="mainHome()">Home</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" target="_blank" href="contactUs.html">Contact Us</a>
+          <a class="nav-link" href="contactUs.html">Contact Us</a>
         </li>
       </ul>
     </div>
