--- a/contactUs.html
+++ b/contactUs.html
@@ -55,6 +55,19 @@
             <a href="https://www.facebook.com/henil.malaviya.7" target="_blank" id="facebook-link">Facebook</a>
 
         </div>
+        
+        <br><br><br><br>
+        
+        <hr style="height: 1px; background-color: rgba(0,0,0,0.6);">
+       <center>
+         <h6 class="card-subtitle mb-2 text-muted my-2">Thanks For Visiting Us.</h6>
+         <h6 class="card-subtitle mb-2 text-muted my-2">Supported For UI By <a
+            href="https://getbootstrap.com/">getbootstrap.com</a></h6>
+         <h6 class="card-subtitle mb-2 text-muted my-2">Supported For Json Files By <a
+             href="https://newsapi.org/">newsapi.org</a></h6>
+         <h6 class="card-subtitle mb-2 text-muted my-2">Give Your <button type="button" onclick="feedbackResponse()"
+            class="btn btn-secondary btn-sm" id="scroll4">Feedback</button></h6>
+       </center>   
 
 
     </div>
