--- a/contactUs.html
+++ b/contactUs.html
@@ -57,7 +57,7 @@
         </div>
         
         <br><br><br><br>
-        
+    <div class="thanksDiv">        
         <hr style="height: 1px; background-color: rgba(0,0,0,0.6);">
        <center>
          <h6 class="card-subtitle mb-2 text-muted my-2">Thanks For Visiting Us.</h6>
@@ -67,7 +67,8 @@
              href="https://newsapi.org/">newsapi.org</a></h6>
          <h6 class="card-subtitle mb-2 text-muted my-2">Give Your <button type="button" onclick="feedbackResponse()"
             class="btn btn-secondary btn-sm" id="scroll4">Feedback</button></h6>
-       </center>   
+       </center>
+    </div>
 
 
     </div>
