--- a/index.html
+++ b/index.html
@@ -136,15 +136,18 @@
 
     <h4 class="errorDiv" id="errorDiv"></h4>
     <hr style="height: 1px; background-color: rgba(0,0,0,0.6);">
-    <center>
-      <h6 class="card-subtitle mb-2 text-muted my-2">Thanks For Visiting Us.</h6>
-      <h6 class="card-subtitle mb-2 text-muted my-2">Supported For UI By <a
-          href="https://getbootstrap.com/" target="_blank">getbootstrap.com</a></h6>
-      <h6 class="card-subtitle mb-2 text-muted my-2">Supported For Json Files By <a
-          href="https://newsapi.org/" target="_blank">newsapi.org</a></h6>
-      <h6 class="card-subtitle mb-2 text-muted my-2">Give Your <button type="button" onclick="feedbackResponse()"
-          class="btn btn-secondary btn-sm" id="scroll4">Feedback</button></h6>
-    </center>
+   <div class="thanksDiv">
+     <center>
+        <h6 class="card-subtitle mb-2 text-muted my-2">Thanks For Visiting Us.</h6>
+        <h6 class="card-subtitle mb-2 text-muted my-2">Supported For UI By <a
+            href="https://getbootstrap.com/" target="_blank">getbootstrap.com</a></h6>
+        <h6 class="card-subtitle mb-2 text-muted my-2">Supported For Json Files By <a
+            href="https://newsapi.org/" target="_blank">newsapi.org</a></h6>
+        <h6 class="card-subtitle mb-2 text-muted my-2">Give Your <button type="button" onclick="feedbackResponse()"
+            class="btn btn-secondary btn-sm" id="scroll4">Feedback</button></h6>
+      </center>
+   </div>
+  
     <div class="my-5" id="more"></div>
     <div class="feedbackResponseDiv" id="feedbackResponseDiv"></div>
 
