--- a/contactUs.html
+++ b/contactUs.html
@@ -52,21 +52,24 @@
                     d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z">
                 </path>
             </svg>
-            <a href="https://www.facebook.com/henil.malaviya.7" target="_blank" id="facebook-link">Facebook</a>
+            <a href="https://www.facebook.com/henil.malaviya.7" id="facebook-link">Facebook</a>
 
         </div>
-        
-        <br><br><br><br>
+
+        <br><br>
         <hr style="height: 1px; background-color: rgba(0,0,0,0.6);">
-       <center>
-         <h6 class="card-subtitle mb-2 text-muted my-2">Thanks For Visiting Us.</h6>
-         <h6 class="card-subtitle mb-2 text-muted my-2">Supported For UI By <a
-            href="https://getbootstrap.com/">getbootstrap.com</a></h6>
-         <h6 class="card-subtitle mb-2 text-muted my-2">Supported For Json Files By <a
-             href="https://newsapi.org/">newsapi.org</a></h6>
-         <h6 class="card-subtitle mb-2 text-muted my-2">Give Your <button type="button" onclick="feedbackResponse()"
-            class="btn btn-secondary btn-sm" id="scroll4">Feedback</button></h6>
-       </center>
+
+        <center>
+            <h6 class="card-subtitle mb-2 text-muted my-2">Thanks For Visiting Us.</h6>
+            <h6 class="card-subtitle mb-2 text-muted my-2">Supported For UI By <a
+                    href="https://getbootstrap.com/">getbootstrap.com</a></h6>
+            <h6 class="card-subtitle mb-2 text-muted my-2">Supported For Json Files By <a
+                    href="https://newsapi.org/">newsapi.org</a></h6>
+            <h6 class="card-subtitle mb-2 text-muted my-2">Give Your <button type="button" onclick="feedbackResponse()"
+                    class="btn btn-secondary btn-sm" id="scroll4">Feedback</button></h6>
+        </center>
+        <br>
+        <div class="feedbackResponseDiv" id="feedbackResponseDiv"></div>
 
 
     </div>
@@ -75,7 +78,7 @@
 
 
     <!-- Script -->
-    <script src="index.js"></script>
+    <script src="index2.js"></script>
 
 
     <!-- Optional JavaScript -->
