--- a/contactUs.html
+++ b/contactUs.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title>Contact Us-Custom News</title>
 
 
@@ -22,7 +23,8 @@
 
 <body>
     <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark" style="width: 100%;">
-        <a class="navbar-brand" id="TITLE">Welcome to Custom News</a>
+        <img src="worldNewsLogo.png" class="d-inline-block align-top" id="worldNewsLogo" alt="World News">
+        <a class="navbar-brand" id="TITLE">World Custom News</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -37,6 +39,9 @@
                     <a class="nav-link" href="contactUs.html">Contact Us</a>
                 </li>
             </ul>
+            <button class="btn btn-outline-warning my-2 my-sm-0" onclick="location.href = 'whatsNew.html'"" type="
+                button">What's
+                New?</button>
         </div>
     </nav>
     <br><br><br>
