--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
   <p id="scrollIsThis"></p>
   <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark" style="width: 100%;">
-    <img src="worldNewsLogo.png" class="d-inline-block align-top" style="width: 60px; height: 40px; margin-left: 2px; margin-right: 5px;" alt="World News">
+    <img src="worldNewsLogo.png" class="d-inline-block align-top" id="worldNewsLogo" alt="World News">
     <a class="navbar-brand" id="TITLE">World Custom News</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
