--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-  <title>Home - Custom News</title>
+  <title>Home - World Custom News</title>
 
   <link rel="stylesheet" href="stylesheet.css">
 
@@ -28,7 +28,8 @@
 <body>
   <p id="scrollIsThis"></p>
   <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark" style="width: 100%;">
-    <img src="worldNewsLogo.png" class="d-inline-block align-top" id="worldNewsLogo" alt="World News">
+    <img src="worldNewsLogo2.png" class="d-inline-block align-top" id="worldNewsLogo" alt="World News">
+
     <a class="navbar-brand" id="TITLE">World Custom News</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -174,5 +175,7 @@
     crossorigin="anonymous"></script>
 
 </body>
+
+
 
 </html>
