--- a/contactUs.html
+++ b/contactUs.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Contact Us-Custom News</title>
+    <title>Contact Us- World Custom News</title>
 
 
 
@@ -23,26 +23,27 @@
 
 <body>
     <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark" style="width: 100%;">
-    <img src="worldNewsLogo.png" class="d-inline-block align-top" id="worldNewsLogo" alt="World News">
-    <a class="navbar-brand" id="TITLE">World Custom News</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+        <img src="worldNewsLogo2.png" class="d-inline-block align-top" id="worldNewsLogo" alt="World News">
+        <a class="navbar-brand" id="TITLE">World Custom News</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="index.html" onclick="mainHome()">Home</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="contactUs.html">Contact Us</a>
-        </li>
-      </ul>
-      <button class="btn btn-outline-warning my-2 my-sm-0" onclick="location.href = 'whatsNew.html'"" type="
-        button">What's New?</button>
-    </div>
-  </nav>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html" onclick="mainHome()">Home</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="contactUs.html">Contact Us</a>
+                </li>
+            </ul>
+            <button class="btn btn-outline-warning my-2 my-sm-0" onclick="location.href = 'whatsNew.html'"" type="
+                button">What's
+                New?</button>
+        </div>
+    </nav>
     <br><br><br>
     <div class="container">
         <h6 id="MadeBy" class="card-subtitle mb-2 text-muted">-Made by Henil Malaviya</h6>
