--- a/whatsNew.html
+++ b/whatsNew.html
@@ -18,7 +18,7 @@
 
 <body>
     <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark" style="width: 100%;">
-        <img src="worldNewsLogo.png" class="d-inline-block align-top" id="worldNewsLogo" alt="World News">
+        <img src="worldNewsLogo2.png" class="d-inline-block align-top" id="worldNewsLogo" alt="World News">
         <a class="navbar-brand" id="TITLE">World Custom News</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,6 +51,24 @@
             <ul>
                 <li>Updated a Logo of Website In Navigation Bar.</li>
                 <li>Updated a 'What's New' Button At Navigation Bar in Home Page And Contact Us Page.</li>
+            </ul>
+
+            <br>
+            <h6 class="card-subtitle mb-2 text-muted">New Update Comming Soon... <span
+                    style="color: lightseagreen;">Stay
+                    Conected...</span>
+            </h6>
+            <hr style="height: 2px; background-color: lightgrey;">
+        </div>
+
+        <div class="newDiv my-3">
+            <hr style="height: 2px; background-color: lightgrey;">
+
+            <h4><strong>Updated at:</strong> 30 March 2020</h4>
+            <br>
+
+            <ul>
+                <li>Updated a New Logo of Website In Navigation Bar.</li>
             </ul>
 
             <br>
