--- a/contactUs.html
+++ b/contactUs.html
@@ -58,7 +58,10 @@
                 </path>
             </svg>
             <a href="https://www.facebook.com/henil.malaviya.7" id="facebook-link">Facebook</a>
-
+        </div>
+        <div class="gmail">
+            <i class="fas fa-envelope" id="gmailLogo"></i>
+            <a href="#" class="gmail-text" id="gmail-text">henilmalaviya06@gmail.com</a>
         </div>
 
         <br><br>
@@ -83,7 +86,7 @@
 
 
     <!-- Script -->
-    <script src="index2.js"></script>
+    <script src="index.js"></script>
 
 
     <!-- Optional JavaScript -->
