--- a/whatsNew.html
+++ b/whatsNew.html
@@ -45,12 +45,12 @@
         <div class="newDiv my-3">
             <hr style="height: 2px; background-color: lightgrey;">
 
-            <h4><strong>Updated at:</strong> 29 March 2020</h4>
+            <h4><strong>Updated at:</strong> 31 March 2020</h4>
             <br>
 
             <ul>
-                <li>Updated a Logo of Website In Navigation Bar.</li>
-                <li>Updated a 'What's New' Button At Navigation Bar in Home Page And Contact Us Page.</li>
+                <li>Added a new button at the Home Page named 'Get Headline'.</li>
+                <li>Added a Gmail Id in Contact Us Page.</li>
             </ul>
 
             <br>
@@ -78,6 +78,26 @@
             </h6>
             <hr style="height: 2px; background-color: lightgrey;">
         </div>
+
+        <div class="newDiv my-3">
+            <hr style="height: 2px; background-color: lightgrey;">
+
+            <h4><strong>Updated at:</strong> 29 March 2020</h4>
+            <br>
+
+            <ul>
+                <li>Updated a Logo of Website In Navigation Bar.</li>
+                <li>Updated a 'What's New' Button At Navigation Bar in Home Page And Contact Us Page.</li>
+            </ul>
+
+            <br>
+            <h6 class="card-subtitle mb-2 text-muted">New Update Comming Soon... <span
+                    style="color: lightseagreen;">Stay
+                    Conected...</span>
+            </h6>
+            <hr style="height: 2px; background-color: lightgrey;">
+        </div>
+
 
     </div>
 
