--- a/index.html
+++ b/index.html
@@ -53,9 +53,8 @@
         <h6 id="MadeBy" class="card-subtitle mb-2 text-muted">-Made by Henil Malaviya</h6>
         <br>
 
-        <div class="headlineDiv my-2" id="headlineDiv">
+        <div class="headlineDiv" id="headlineDiv">
             <div class="headlineMarDiv" id="headlineMarDiv">
-                <marquee direction="left" id="headlineMar"></marquee>
             </div>
             <div class="headlineBtn" id="headlineBtn">
                 <button class="btn btn-primary btn-sm" accesskey="h" onclick="headlineResponse()">Get Headline</button>
@@ -141,8 +140,8 @@
                     </select>
                 </div>
                 <br>
-                <button class="btn btn-primary my-2" type="submit" name="submit" accesskey="G"
-                    onclick="newsResponse()">Get
+                <button class="btn btn-primary my-2" type="submit" name="submit" accesskey="g"
+                    onclick="newsResponse(event)">Get
                     News</button>
             </form>
         </div>
