--- a/whatsNew.html
+++ b/whatsNew.html
@@ -49,8 +49,9 @@
             <br>
 
             <ul>
-                <li>Added a new button at the Home Page named 'Get Headline'.</li>
                 <li>Added a Gmail Id in Contact Us Page.</li>
+                <li>Now News are Quick with News Image.</li>
+                <li>Replaced Country and catagory option in Navigation Bar.</li>
             </ul>
 
             <br>
