--- a/whatsNew.html
+++ b/whatsNew.html
@@ -45,13 +45,30 @@
         <div class="newDiv my-3">
             <hr style="height: 2px; background-color: lightgrey;">
 
+            <h4><strong>Updated at:</strong> 1 April 2020</h4>
+            <br>
+
+            <ul>
+                <li>Replaced Country and Catagory Selection on Home Page.</li>
+            </ul>
+
+            <br>
+            <h6 class="card-subtitle mb-2 text-muted">New Update Comming Soon... <span
+                    style="color: lightseagreen;">Stay
+                    Conected...</span>
+            </h6>
+            <hr style="height: 2px; background-color: lightgrey;">
+        </div>
+
+        <div class="newDiv my-3">
+            <hr style="height: 2px; background-color: lightgrey;">
+
             <h4><strong>Updated at:</strong> 31 March 2020</h4>
             <br>
 
             <ul>
+                <li>Added a new button at the Home Page named 'Get Headline'.</li>
                 <li>Added a Gmail Id in Contact Us Page.</li>
-                <li>Now News are Quick with News Image.</li>
-                <li>Replaced Country and catagory option in Navigation Bar.</li>
             </ul>
 
             <br>
