--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
 <body>
     <p id="scrollIsThis"></p>
     <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark" style="width: 100%;">
-        <img src="worldNewsLogo3.png" class="d-inline-block align-top" id="worldNewsLogo" alt="World News">
+        <img src="worldNewsLogo3.png" href="https://henil0604.github.io/worldcustomnews/worldNewsLogo3.png" class="d-inline-block align-top" id="worldNewsLogo" alt="World News">
 
-        <a class="navbar-brand" id="TITLE">World Custom News</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
