--- a/contactUs.html
+++ b/contactUs.html
@@ -23,8 +23,8 @@
 
 <body>
     <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark" style="width: 100%;">
-        <img src="worldNewsLogo2.png" class="d-inline-block align-top" id="worldNewsLogo" alt="World News">
-        <a class="navbar-brand" id="TITLE">World Custom News</a>
+        <img src="worldNewsLogo3.png" href="https://henil0604.github.io/worldcustomnews/worldNewsLogo3.png" class="d-inline-block align-top" id="worldNewsLogo" alt="World News">
+
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -32,7 +32,7 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="index.html" onclick="mainHome()">Home</a>
                 </li>
                 <li class="nav-item active">
@@ -40,8 +40,7 @@
                 </li>
             </ul>
             <button class="btn btn-outline-warning my-2 my-sm-0" onclick="location.href = 'whatsNew.html'"" type="
-                button">What's
-                New?</button>
+                button">What's New?</button>
         </div>
     </nav>
     <br><br><br>
