--- a/whatsNew.html
+++ b/whatsNew.html
@@ -48,6 +48,26 @@
         <div class="newDiv my-3">
             <hr style="height: 2px; background-color: lightgrey;">
 
+            <h4><strong>Updated at:</strong> 9 May 2020</h4>
+            <br>
+
+            <ul>
+                <li>Updated a Logo of Website.</li>
+                <li>Removed a Name of Website.</li>
+                <li>Improved UI of Navigation Bar.</li>
+            </ul>
+
+            <br>
+            <h6 class="card-subtitle mb-2 text-muted">New Update Comming Soon... <span
+                    style="color: lightseagreen;">Stay
+                    Conected...</span>
+            </h6>
+            <hr style="height: 2px; background-color: lightgrey;">
+        </div>
+        
+        <div class="newDiv my-3">
+            <hr style="height: 2px; background-color: lightgrey;">
+
             <h4><strong>Updated at:</strong> 1 April 2020</h4>
             <br>
 
