--- a/whatsNew.html
+++ b/whatsNew.html
@@ -52,7 +52,7 @@
             <br>
 
             <ul>
-                <li>Updated a Logo of Website.</li>
+                <li>Updated a Logo of Website.( <a href="https://henil0604.github.io/worldcustomnews/worldNewsLogo3.png">Click Here To See</a> )</li>
                 <li>Removed a Name of Website.</li>
                 <li>Improved UI of Navigation Bar.</li>
             </ul>
