--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
     <p id="scrollIsThis"></p>
-    <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark" style="width: 100%;">
+    <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-light" style="width: 100%;">
         <img src="worldNewsLogo3.png" href="https://henil0604.github.io/worldcustomnews/worldNewsLogo3.png" class="d-inline-block align-top" id="worldNewsLogo" alt="World News">
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
