--- a/index.html
+++ b/index.html
@@ -20,13 +20,25 @@
         });
     </script>
 
+    <script type="text/javascript">
+        function googleTranslateElementInit2() {
+            new google.translate.TranslateElement({
+                pageLanguage: 'en',
+                autoDisplay: false
+            }, 'google_translate_element2');
+        }
+    </script>
+    <script type="text/javascript"
+        src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit2"></script>
+
 
 </head>
 
 <body>
     <p id="scrollIsThis"></p>
     <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark" style="width: 100%;">
-        <img src="worldNewsLogo3.png" href="https://henil0604.github.io/worldcustomnews/worldNewsLogo3.png" class="d-inline-block align-top" id="worldNewsLogo" alt="World News">
+        <img src="worldNewsLogo3.png" href="https://henil0604.github.io/worldcustomnews/worldNewsLogo3.png"
+            class="d-inline-block align-top" id="worldNewsLogo" alt="World News">
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,6 +64,11 @@
         <h6 id="MadeBy" class="card-subtitle mb-2 text-muted">-Made by Henil Malaviya</h6>
         <br>
         <div class="selection">
+            <div id="translate">
+                <div id="google_translate_element2"></div>
+            </div>
+
+
             <select id="country-input" class="country-input" onchange="newsResponse()">
                 <option id="country-input-item" value="in"><a>India</a></option>
                 <option id="country-input-item" value="ar">Argentina</option>
